fix: camera and scrollbar-gutter 🤨

--- a/src/app/styles/_globals.scss
+++ b/src/app/styles/_globals.scss
@@ -10,6 +10,10 @@ body {
   background: var(--background-gradient);
 }
 
+html {
+  scrollbar-gutter: auto;
+}
+
 h1,
 .h1,
 h2,
